main scss imports

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,4 @@
 @import "./components/sliderComp";
 @import "./components/basicservice";
 @import "./components/featuredProduct";
+@import "./components/product/productDetails";
